--- a/hbs/index.handlebars
+++ b/hbs/index.handlebars
@@ -8,7 +8,7 @@
         {{config.[project-version]}} | Documentation
     </title>
     <script src="bootstrap.bundle.min.js"></script>
-    <link href="bootstrap.css" rel="stylesheet">
+    <link href="bootstrap.min.css" rel="stylesheet">
     <link href="stylist.css" rel="stylesheet">
     {{#if config.[project-description]}}
         <meta name="description" content="{{config.[project-description]}}">
