--- a/hbs/params.handlebars
+++ b/hbs/params.handlebars
@@ -13,7 +13,7 @@
                 <tr>
                     <td><code>{{this.name}}</code></td>
                     <td><code>{{> type this.type}}</code></td>
-                    <td><code>{{> description this.description}}</code></td>
+                    <td>{{> description this.description}}</td>
                 </tr>
             {{/each}}
         </tbody>
