--- a/stylist.css
+++ b/stylist.css
@@ -13,29 +13,38 @@ ul li ul li ul li h3 {
 
 section h2 {
     font-size: 2.5rem;
+    margin-top: 5rem;
 }
 
 section section h2 {
     font-size: 1.5rem;
+    margin-top: 2rem;
 }
 
 section section section h2 {
     font-size: 1.25rem;
     font-weight: 300;
+    margin-top: 1.5rem;
 }
 
 h7 {
     font-weight: 600;
 }
 
-.vh {
+.nav-section {
     max-height: 99vh;
+    min-width: max-content;
     overflow-y: scroll;
+    position: sticky;
+    top: 0;
+    padding-top: 0.5vh;
+    padding-bottom: 0.5vh;
 }
 
-body {
-    margin-top: 0.5vh;
-    margin-bottom: 0.5vh;
+.main-section {
+    padding-top: 0.5vh;
+    padding-bottom: 0.5vh;
+    min-width: 40vw;
 }
 
 [data-bs-toggle="collapse"].collapsed .if-not-collapsed {
@@ -44,4 +53,8 @@ body {
 
 [data-bs-toggle="collapse"]:not(.collapsed) .if-collapsed {
     display: none;
+}
+
+code a {
+    color: #d63384;
 }
