--- a/hbs/index.handlebars
+++ b/hbs/index.handlebars
@@ -21,12 +21,12 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="vh list" style="width: max-content;">
-                <h1 class="mt-2 mb-3">{{config.[project-name]}} {{config.[project-version]}}</h1>
+        <div class="d-flex flex-row">
+            <div class="position-sticky nav-section list">
+                <h1 class="mt-2 mb-3 me-2">{{config.[project-name]}} {{config.[project-version]}}</h1>
                 {{> navList comments}}
             </div>
-            <div class="vh main col">                
+            <div class="main-section ps-3">
                 {{> mainList list=comments}}
             </div>
         </div>
