--- a/hbs/type.handlebars
+++ b/hbs/type.handlebars
@@ -1,15 +1,31 @@
 {{#switch this.type}}
     {{#case 'TypeApplication'}}
-        {{> type this.expression}}&lt;{{#each this.applications}}{{#if @index}}, {{/if}}{{> type this}}{{/each}}&gt;
+        {{> type this.expression}}
+        &lt;
+        {{#each this.applications}}
+            {{#if @index}}, {{/if}}{{> type this}}
+        {{/each}}
+        &gt;
     {{/case}}
     {{#case 'NameExpression'}}
-        {{this.name}}
+        {{{crossLink this.name}}}
     {{/case}}
     {{#case 'UnionType'}}
-        {{#each this.elements}}{{#if @index}}| {{/if}}{{> type this}}{{/each}}
+        {{#each this.elements}}
+            {{#if @index}}| {{/if}}{{> type this}}
+        {{/each}}
     {{/case}}
-    {{#case 'ArrayType'}} [{{#each this.elements}}{{#if @index}}, {{/if}}{{> type this}}{{/each}}] {{/case}}
-    {{#case 'FunctionType'}} ({{#each this.params}}{{#if @index}}, {{/if}}{{> type this}}{{/each}}) => {{> type this.result}}
+    {{#case 'ArrayType'}}
+        [{{#each this.elements}}
+            {{#if @index}}, {{/if}}{{> type this}}
+        {{/each}}]
+    {{/case}}
+    {{#case 'FunctionType'}}
+        ({{#each this.params}}
+            {{#if @index}}, {{/if}}
+            {{> type this}}
+        {{/each}})
+         => {{> type this.result}}
     {{/case}}
     {{#case 'ParameterType'}}
         {{this.name}}{{#if this.expression}}: {{> type this.expression}}{{/if}}
@@ -24,6 +40,8 @@
         {{> type this.expression}} | undefined
     {{/case}}
     {{#case 'VoidLiteral'}} void {{/case}}
+    {{#case 'NullLiteral'}} null {{/case}}
     {{#case 'AllLiteral'}} any {{/case}}
+    {{#case 'BooleanLiteralType'}} {{this.value}} {{/case}}
     {{#case 'StringLiteralType'}}'{{this.value}}'{{/case}}
 {{/switch}}
