add examples section

--- a/hbs/mainItem.handlebars
+++ b/hbs/mainItem.handlebars
@@ -14,6 +14,7 @@
     {{> params this.params}}
     {{> returns list=this.throws name='Throws'}}
     {{> returns list=this.returns name='Returns'}}
+    {{> examples this.examples}}
     {{> propsList list=this.properties name='Properties'}}
     {{#switch this.kind}}
         {{#case 'class'}}
