--- a/hbs/examples.handlebars
+++ b/hbs/examples.handlebars
@@ -1,6 +1,6 @@
 {{#if this.length}}
     Example
-    <div class="ms-4">
+    <div class="{{className 'examples'}}">
     {{#each this}}
         <code><pre>{{{this.description}}}</pre></code>
     {{/each}}
