--- a/hbs/index.handlebars
+++ b/hbs/index.handlebars
@@ -10,6 +10,10 @@
     <script src="bootstrap.bundle.min.js"></script>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="stylist.css" rel="stylesheet">
+    {{#if config.[documentation-stylist].extraCss}}
+        <link href="{{config.[documentation-stylist].extraCss}}" rel="stylesheet">
+    {{/if}}
+    <link href="stylist.css" rel="stylesheet">
     {{#if config.[project-description]}}
         <meta name="description" content="{{config.[project-description]}}">
         <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -20,15 +24,13 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="d-flex flex-row">
-            <div class="position-sticky nav-section list">
-                <h1 class="mt-2 mb-3 me-2">{{config.[project-name]}} {{config.[project-version]}}</h1>
-                {{> navList comments}}
-            </div>
-            <div class="main-section ps-3">
-                {{> mainList list=comments}}
-            </div>
+    <div class="{{className 'container'}}">
+        <div class="{{className 'nav'}}">
+            <h1 class="{{className 'title'}}">{{config.[project-name]}} {{config.[project-version]}}</h1>
+            {{> navList comments}}
+        </div>
+        <div class="{{className 'main'}}">
+            {{> mainList list=comments}}
         </div>
     </div>
     </div>
