--- a/hbs/navItem.handlebars
+++ b/hbs/navItem.handlebars
@@ -1,13 +1,16 @@
-<div>
-    <div class="d-flex flex-row">
-        <button class="btn btn-collapse m-0 me-2 p-0 align-items-center collapsed" {{#unless this.members.static}}style="visibility: hidden" {{/unless}} data-bs-target="#{{this.slug}}-collapse" data-bs-toggle="collapse">
-            <span class="font-monospace if-collapsed">+</span>
-            <span class="font-monospace if-not-collapsed">-</span> </button>
-        <a class="d-flex text-decoration-none align-items-center" href="#{{this.slug}}">
-            <h3 class="m-0">{{this.name}}</h3>
-        </a>
-    </div>
-    <div class="collapse" id="{{this.slug}}-collapse">
-        {{> navList this.members.static}}
-    </div>
+<div class="{{className 'navItem'}}">
+    <button class="btn btn-collapse m-0 me-2 p-0 align-items-center collapsed" {{#hasChildren this.members}}{{else}}style="visibility: hidden" {{/hasChildren}} data-bs-target="#{{this.slug}}-collapse"
+        data-bs-toggle="collapse">
+        <span class="font-monospace if-collapsed">+</span>
+        <span class="font-monospace if-not-collapsed">-</span> </button>
+    <a href="#{{this.slug}}">
+        <h3 class="m-0">{{this.name}}</h3>
+    </a>
+</div>
+<div class="collapse" id="{{this.slug}}-collapse">
+    {{> navList this.members.global}}
+    {{> navList this.members.static}}
+    {{> navList this.members.events}}
+    {{> navList this.members.inner}}
+    {{> navList this.members.instance }}
 </div>
