--- a/hbs/propsList.handlebars
+++ b/hbs/propsList.handlebars
@@ -2,22 +2,22 @@
     {{#if name}}
         <h7>{{name}}</h7>
     {{/if}}
-    <table class="table table-light">
+    <table class="{{className 'paramsTable'}}">
         <thead>
-            <th class="col-2">Property</th>
-            <th class="col-4">Type</th>
-            <th class="col-6">Description</th>
+                <th class="{{className 'paramsParameterHeader'}}">Property</th>
+                <th class="{{className 'paramsTypeHeader'}}">Type</th>
+                <th class="{{className 'paramsDescriptionHeader'}}">Description</th>
         </thead>
         <tbody>
             {{#each list}}
                 <tr>
-                    <td>
+                    <td class="{{className 'paramsParameterData'}}">
                         <code>{{this.name}}</code>
                     </td>
-                    <td>
+                    <td class="{{className 'paramsTypeData'}}">
                         <code>{{> type this.type}}</code>
                     </td>
-                    <td>
+                    <td class="{{className 'paramsDescriptionData'}}">
                         {{> description this.description}}
                         {{#each this.tags}}
                             {{#switch this.title}}
