--- a/hbs/returns.handlebars
+++ b/hbs/returns.handlebars
@@ -1,6 +1,6 @@
 {{#if list.length}}
     {{name}}
-    <div class="ms-4">
+    <div class="{{className 'returns'}}">
         {{#each list}}
             <code>{{> type this.type}}</code>
             {{> description this.description}}
