--- a/stylist.css
+++ b/stylist.css
@@ -27,6 +27,10 @@ section section section h2 {
     margin-top: 1.5rem;
 }
 
+section section hr {
+    display: none;
+}
+
 h7 {
     font-weight: 600;
 }
