add unit testing

--- a/hbs/index.handlebars
+++ b/hbs/index.handlebars
@@ -9,11 +9,10 @@
     </title>
     <script src="bootstrap.bundle.min.js"></script>
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="stylist.css" rel="stylesheet">
+    <link href="{{config.[documentation-stylist].css}}" rel="stylesheet">
     {{#if config.[documentation-stylist].extraCss}}
         <link href="{{config.[documentation-stylist].extraCss}}" rel="stylesheet">
     {{/if}}
-    <link href="stylist.css" rel="stylesheet">
     {{#if config.[project-description]}}
         <meta name="description" content="{{config.[project-description]}}">
         <meta name="viewport" content="width=device-width,initial-scale=1">
