documentation-stylist is now known as documentation-hipster

--- a/hbs/index.handlebars
+++ b/hbs/index.handlebars
@@ -9,9 +9,9 @@
     </title>
     <script src="bootstrap.bundle.min.js"></script>
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="{{config.[documentation-stylist].css}}" rel="stylesheet">
-    {{#if config.[documentation-stylist].extraCss}}
-        <link href="{{config.[documentation-stylist].extraCss}}" rel="stylesheet">
+    <link href="{{config.[documentation-hipster].css}}" rel="stylesheet">
+    {{#if config.[documentation-hipster].extraCss}}
+        <link href="{{config.[documentation-hipster].extraCss}}" rel="stylesheet">
     {{/if}}
     {{#if config.[project-description]}}
         <meta name="description" content="{{config.[project-description]}}">
